// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment should throw a different error if a jestDynaliteConfigDirectory is passed to the test environment 1`] = `
"
jest-dynalite could not find \\"jest-dynalite-config.js\\" or \\"jest-dynalite-config.ts\\" in the provided jestDynaliteConfigDirectory (somebaddirectory).

If you didn't intend to be using this directory for the config, please specify a custom
directory: https://github.com/freshollie/jest-dynalite/#advanced-setup

If you are not using the preset, you should apply 'import \\"jest-dynalite/withDb\\"'
to your \\"setupFilesAfterEnv\\".

For more information, please see https://github.com/freshollie/jest-dynalite/#breaking-changes.
      "
`;

exports[`Environment should throw an error if config file could not be located 1`] = `
"
jest-dynalite could not find \\"jest-dynalite-config.js\\" or \\"jest-dynalite-config.ts\\" in the jest <rootDir> (somebaddirectory).

If you didn't intend to be using this directory for the config, please specify a custom
directory: https://github.com/freshollie/jest-dynalite/#advanced-setup

If you are not using the preset, you should apply 'import \\"jest-dynalite/withDb\\"'
to your \\"setupFilesAfterEnv\\".

For more information, please see https://github.com/freshollie/jest-dynalite/#breaking-changes.
      "
`;
